# 2023CPL

./: CMakeLists.txt
1-types-io/: CMakeLists.txt  JDN.c  PI.c  Sphere.c  admin-scanf.c  admin.c  ascii.c  change.c  circle.c  equation.c  gravity.c  mol.c  test.c  time.c
10-double-pointers-struct/: CMakeLists.txt  bsearch.c  bsearch1.c  fifa.c  polynlist.c  split-sort.c
11-linkedlist/: CMakeLists.txt  StackPour.c  buddy.c  josephus.c  linked.c  linked.h
2-if-for-array/: CMakeLists.txt  Inverse.c  collatz.c  factorial.c  seriesjyj.c  single.c  standai.c  standup.c  the-series.c
2021-exam/: CMakeLists.txt  merge.c  recog.c  sorted.c
3-for-a-while/: CMakeLists.txt  b-ternary-1.c  b-ternary-2.c  bubble-sort.c  flip.c  josephus.c  palindrome-1.c  try_something.c
4-loop/: CMakeLists.txt  formation.c  matrix-mult.c  mines.c  obstacle.c  sudoku.c  trace.c
5-function/: CMakeLists.txt  absolute-prime.c  behaviors.c  magic-square.c  next-permutation.c  pair.c  radix.c  sum.c
6-recursion/: CMakeLists.txt  decomposition.c  integration.c  max.c  pascal.c  poi.c  test.c  tiles.c  triangle.c
6-recursion/mergesort/: mergesort.c
7-data-types/: CMakeLists.txt  Goldbach.c  brackets.c  buddy.c  cuboid.c  hyr.c  pour.c  rotate.c  whac-a-mole.c  wine.c
8-pointers/: CMakeLists.txt  interpreter.c  substr.c  title.c
9-pointers-c-strings/: CMakeLists.txt  parse.c  str_interleaf_1.c  str_interleaf_2.c  strs_cat.c  strs_interleaf.c  tokenizer.c
exam-2/: CMakeLists.txt  key.c  wonderbell.c
