add_executable(circle circle.c)
add_executable(Sphere Sphere.c)
add_executable(mol mol.c)
add_executable(admin admin.c)
add_executable(admin-scanf admin-scanf.c)
add_executable(ascii ascii.c)
add_executable(change change.c)
add_executable(pi PI.c)
add_executable(time time.c)
add_executable(JDN JDN.c)
add_executable(gravity gravity.c)
add_executable(equation equation.c)
add_executable(test test.c)