add_executable(brackets brackets.c)
add_executable(buddy buddy.c)
add_executable(cuboid cuboid.c)
add_executable(pour pour.c)
add_executable(rotate rotate.c)
add_executable(stack stack.c)
add_executable(whac-a-mole whac-a-mole.c)
add_executable(wine wine.c)
add_executable(hyr hyr.c)
add_executable(Goldbach Goldbach.c)